# swarmy-tauri

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  lastcmd  package-lock.json  package.json  styles.css  tailwind.config.js
.cargo/: config.toml
src/: app.rs  config.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: common.rs  error.rs  lib.rs  main.rs  majordomo.rs
src-tauri/src/data/: mod.rs
src-tauri/src/map_stats/: data.rs  mod.rs
src-tauri/src/mpq_file_scan/: mod.rs
src-tauri/src/replay_caches/: mod.rs
src-tauri/src/scan/: mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/snapshot_stats/: mod.rs
src/common/: mod.rs
src/components/: left_sidebar_menu.rs  mod.rs
src/config/: mod.rs  view.rs
src/map_stats/: actions.rs  mod.rs  view.rs
src/scan/: actions.rs  arrow_ipc_stats.rs  mod.rs  mpq_file_scan.rs  view.rs
swarmy-tauri-common/: Cargo.toml
swarmy-tauri-common/src/: dataframe.rs  error.rs  lib.rs  map_stats.rs  response.rs  snapshot_stats.rs
swarmy-tauri-common/src/settings/: mod.rs
