[package]
name = "swarmy-tauri-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
s2protocol = { git = "https://www.github.com/sebosp/s2protocol-rs", branch="init-include-assets", default-features = false}
reactive_stores = "0.3"
reactive_graph = "0.2"

[workspace]
members = ["src-tauri"]
