[package]
name = "swarmy-tauri-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
s2protocol = { git = "https://www.github.com/sebosp/s2protocol-rs", branch="init-include-assets", default-features = false, features = ["arrow"]}
reactive_stores = "0.3"
reactive_graph = "0.2"
phosphor-leptos = "0.8.0"
swarmy-tauri-common = {path = "swarmy-tauri-common" }

[workspace]
members = [
    "src-tauri",
    "swarmy-tauri-common"
]


[profile.dev]
incremental = true
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 1
debug = false
