[package]
name = "swarmy-tauri"
version = "0.1.0"
description = "Swarmy Tauri App"
authors = ["Seb Ospina <kraige@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "swarmy_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
s2protocol = { git = "https://www.github.com/sebosp/s2protocol-rs", branch="init-include-assets", default-features = false, features = ["dep_arrow"] }
tauri-plugin-log = "2"
log = "0.4"
tauri-plugin-fs = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-store = "2"
