[package]
name = "swarmy-tauri-common"
version = "0.1.0"
description = "Swarmy Tauri App"
authors = ["Seb Ospina <kraige@gmail.com>"]
edition = "2021"

[dependencies]
thiserror = "2.0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
s2protocol = { workspace = true }
# tauri-plugin-store = "2.4.1"
