[package]
name = "swarmy-tauri-common"
version = "0.1.0"
description = "Swarmy Tauri App"
authors = ["Seb Ospina <kraige@gmail.com>"]
edition = "2021"

[dependencies]
thiserror = "2.0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
s2protocol = { workspace = true }
chrono = "0.4"
serde-wasm-bindgen = "0.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
polars = { version = "0.52.0", features = [
  "full",
  "trigonometry",
  "regex",
  "strings",
  "top_k",
  "dtype-full",
] }
